# Dendro-GR

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ReadMe.md  _config.yml
BSSN_GR/: CMakeLists.txt  ReadMe.md
BSSN_GR/cuda/dep/: rhs.cuh
BSSN_GR/cuda/include/: bssnCtxGPU.cuh  bssn_kernels.cuh  bssnrhs_evar_derivs.cuh  test_utils.h
BSSN_GR/cuda/scripts/: At_rhs.cpp  At_rhs_tf.cpp  Gt_B_rhs.cpp  K_rhs1.cpp  K_rhs2.cpp  R_00.cpp  R_01.cpp  R_02.cpp  R_11.cpp  R_12.cpp  R_22.cpp  a_beta_gt_chi.cpp  block_id_1.cpp  block_id_2.cpp  block_id_3.cpp  bssn_derivs_gpu.py  bssneqs_eta_const_standard_gauge1.cpp  bssneqs_eta_const_standard_gauge2.cpp  bssneqs_eta_const_standard_gauge3.cpp  bssneqs_eta_const_standard_gauge4.cpp  bssneqs_eta_const_standard_gauge5.cpp  bssneqs_eta_const_standard_gauge6.cpp  bssneqs_eta_const_standard_gauge7.cpp  bssnrhs_deriv_x_dir.cuh  bssnrhs_memalloc.h  (+16 more)
BSSN_GR/include/: TPUtilities.h  TwoPunctures.h  adm2bssn.h  aeh.h  aeh_solver.h  bh.h  bssnAEH.h  bssnCtx.h  bssn_constraints.h  dataUtils.h  derivs.h  gr.h  grDef.h  grUtils.h  grUtils.tcc  gwExtract.h  hadrhs.h  lebedev.h  parameters.h  physcon.h  profile_params.h  psi4.h  rhs.h  rhsTestBed.h  rkBSSN.h  sph.h  swsh.h  trumpet.h  zipUnzipTest.h
BSSN_GR/pars/: ReadMe.md  bbh.par.json  gw150914.par.json  id_q1_nospin.json  ks-bssn.par.json  noise.par.json  q1.par.json  q1.par.toml  q1.tinytest.par.json  q1.tinytest.par.toml  q16.par.toml  q2.par.json  q2.par.toml  q32.par.toml  q4.par.json  q4.par.toml  q8.par.json  q8.par.toml  rit_q1.par.json  rit_q2.par.json
BSSN_GR/scripts/: bssnrhs_dealloc.h  bssnrhs_dealloc_adv.h  bssnrhs_derivs.h  bssnrhs_derivs_adv.h  bssnrhs_evar_derivs.h  bssnrhs_ko_derivs.h  bssnrhs_lts_smooth_ko.h  bssnrhs_memalloc.h  bssnrhs_memalloc_adv.h  bssnrhs_tvb3_derivs.h  bssnrhs_tvb5_derivs.h  constraint_dealloc.h  constraint_derivs.h  constraint_eqs.h  constraint_memalloc.h  constraint_vars.h  ctrajectory.py  gen_bssnrhs_code  gen_dervi.pl  getstrain.py  id.py  trajectory.py
BSSN_GR/src/: Kerr.cpp  TPCoordTransf.cpp  TPEquations.cpp  TPFuncAndJacobian.cpp  TPID.cpp  TPNewton.cpp  TPUtilities.cpp  TwoPunctures.cpp  bssn.par.json  bssnAEH.cpp  bssnCtx.cpp  bssn_constraints.cpp  bssn_eqns_SSL_HD.cpp  bssn_eqns_SSL_HD_HAM_INCLUDED.inc.cpp  bssneqs.cpp  bssneqs_CAHD_noSSL.inc.cpp  bssneqs_eta_const_rochester_gauge.cpp  bssneqs_eta_const_rochester_gauge_SSL.cpp  bssneqs_eta_const_standard_gauge.cpp  bssneqs_eta_const_standard_gauge_SSL.cpp  bssneqs_eta_func_rochester_gauge.cpp  bssneqs_eta_func_rochester_gauge_SSL.cpp  bssneqs_eta_func_standard_gauge.cpp  bssneqs_eta_func_standard_gauge_SSL.cpp  bssngr_main.cpp  checkDerivatives.cpp  dataUtils.cpp  derivs.cpp  det_metric_aeh.cpp  expansion_aeh.cpp  gr.cpp  grUtils.cpp  gr_nuts.cpp  gr_scaling.cpp  gr_wamr_test.cpp  hadrhs.F90  ks_vars.cpp  ksinit.cpp  parameters.cpp  physcon.cpp  (+7 more)
EM1/: CMakeLists.txt
EM1/include/: derivs.h  em1.h  em1Ctx.h  em1Utils.h  parameters.h  physcon.h  profile_params.h  rhs.h  rk4em1.h
EM1/par/: em1.par.json  em1.py  em1_lts.par.json  em1_vis.py  em1constraint.py  gen_par.py
EM1/src/: em1.cpp  em1Ctx.cpp  em1Utils.cpp  em1_eqs.cpp  em1_lts.cpp  parameters.cpp  physcon.cpp  physconeqs.cpp  profile_params.cpp  rhs.cpp  rk4em1.cpp
EM2/: CMakeLists.txt
EM2/include/: derivs.h  em2Ctx.h  em2Utils.h  parameters.h  physcon.h  profile_params.h  rhs.h  rk4em2.h
EM2/par/: dendro.py  em2.par.json  em2.py  em2_vis.py  em2constraint.py  gen_par.py
EM2/src/: derivs.cpp  em2.cpp  em2Ctx.cpp  em2Utils.cpp  em2_eqs.cpp  em2_lts.cpp  parameters.cpp  physcon.cpp  physcon_eqs.cpp  profile_params.cpp  rhs.cpp  rhs0.cpp  rk4em2.cpp
EM3/: CMakeLists.txt
EM3/include/: derivs.h  em3.h  em3Ctx.h  em3Utils.h  parameters.h  physcon.h  profile_params.h  rhs.h  rk4em3.h
EM3/par/: dendro.py  em3.par.json  em3.py  em3_vis.py  em3constraint.py  gen_par.py
EM3/src/: em3.cpp  em3Ctx.cpp  em3Utils.cpp  em3_eqs.cpp  em3_lts.cpp  parameters.cpp  physcon.cpp  physconeqs.cpp  profile_params.cpp  rhs.cpp  rk4em3.cpp
EM4/: CMakeLists.txt
EM4/include/: derivs.h  em4Ctx.h  em4Utils.h  parameters.h  physcon.h  profile_params.h  rhs.h  rk4em4.h
EM4/par/: em4.par.json  em4.py  em4_vis.py  gen_par.py
EM4/src/: derivs.cpp  em4.cpp  em4Ctx.cpp  em4Utils.cpp  em4_eqs.cpp  em4_lts.cpp  parameters.cpp  physcon.cpp  physconeqs.cpp  profile_params.cpp  rhs.cpp  rk4em4.cpp
Fluid/: CMakeLists.txt  README
Fluid/include/: average.h  derivs.h  fluid.h  fluidMath.h  fluidUtils.h  fluidUtils.tcc  geom.h  parameters.h  profile_params.h  recon.h  rhs.h  rhshlle.h  rkfluid.h  root.h
Fluid/par/: fluidA.par.json  fluidDuffMac.par.json  fluidDuffMacShell.par.json
Fluid/scripts/: DENDRO_GR_VAR_DATA.csv  dendroCodeGeneration.py  fluidA.par.json  parameters.cpp  parameters.h
Fluid/src/: derivs.cpp  fluid.cpp  fluidMath.cpp  fluidUtils.cpp  parameters.cpp  profile_params.cpp  recon.cpp  rhs.cpp  rhshlle.cpp  rkfluid.cpp  root.cpp
NLSigma/: CMakeLists.txt  README
NLSigma/include/: derivs.h  nlsmCtx.h  nlsmCtxGPU.cuh  nlsmInvCtx.h  nlsmUtils.h  parameters.h  profile_params.h  rhs.h  rk4nlsm.h
NLSigma/par/: gen_par.py  nlsm.par.json  nlsm.py  nlsmA.par.json  nlsmA_SMALL.par.json  nlsmB.par.json  nlsm_conv_test.par.json  nlsm_vis.py  nlsmt.par.json  nlsmt.vis.par.json
NLSigma/src/: nlsm.cpp  nlsmCtx.cpp  nlsmCtxGPU.cu  nlsmInvCtx.cpp  nlsmUtils.cpp  nlsm_cuda.cu  nlsm_eqs.cpp  nlsm_inv.cpp  nlsm_nuts.cpp  nlsm_sdc.cpp  parameters.cpp  profile_params.cpp  rhs.cpp  rk4nlsm.cpp
dendro/: CMakeLists.txt
dendro/include/: TreeNode.h  colors.h  cudaUtils.h  daUtils.h  daUtils.tcc  dendro.h  dendroIO.h  dendroProfileParams.h  device.h  dtypes.h  genPts_par.h  hcurvedata.h  launcher.h  matRecord.h  mathUtils.tcc  mesh.tcc  meshE2NUtils.tcc  mesh_gpu.h  ompUtils.h  ompUtils.tcc  parUtils.h  point.h  pointT.h  sfcSearch.h  skey.h  stencil.h  sub_oda.tcc  waveletAMR.h  waveletAMR.tcc
dendro/src/: binUtils.cpp  dendro.cpp  hcurvedata.cpp  mesh.cpp  odaUtils.cpp  point.cpp  sc_flops.cpp  sub_oda.cpp  waveletRefEl.cpp
(+348 files in other folders)
